--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -331,18 +331,21 @@ a.verified {
 	background-color: #fff1cf;
 	color: #7e652e;
 	padding: 20px;
-	border: 1px solid #736552;
+	border: 1px solid #fff;
 	margin-top: 0.5em;
 }
 .alert.new-member {
 	background-color: #fff1cf;
 	color: #7e652e;
 	padding: 20px;
-	border: 1px solid #736552;
+	border: 1px solid #fff;
 	margin-top: 0.5em;
 }
 p.logins {
 	margin-top: 1em;
+}
+#session-msg {
+  width: 100%;
 }
 .alert-danger {
 	font-family: 'Courier Prime', monospace;
@@ -353,19 +356,21 @@ p.logins {
 	margin-bottom: 1em;
 	width: 100%;
 	text-align: center;
-	border: 1px solid #ff0000;
-	border: 1px solid #f02222;
+	border: 1px solid #fff;
 	text-align: left;
 }
 .alert.alert-success {
 	// font-family: 'Courier Prime', monospace;
 	padding: 20px;
-	background-color: rgba(212,232,218,1);
-	color: #415b45;
+	background-color: #50ae4c;
+	color: #fff;
 	margin-bottom: 1em;
 	width: 100%;
 	text-align: center;
-	border: 1px solid #415b45;
+	border: 1px solid #fff;
+}
+.alert.alert-success.left {
+  text-align: left;
 }
 .alert.pass-reset {
 	padding: 20px;
@@ -374,7 +379,7 @@ p.logins {
 	margin-bottom: 1em;
 	width: 100%;
 	text-align: left;
-	border: 1px solid #415b45;
+	border: 1px solid #fff;
 
 }
 #login-wrap {
