--- a/style-expanded.css
+++ b/style-expanded.css
@@ -1706,6 +1706,7 @@ div#success-wrap span.success-msg {
 }
 a#toggle-lat-long-msg,
 a#toggle-one-tap-msg,
+a#toggle-yer-phone-num,
 a#toggle-descriptive-location,
 a#toggle-pdf-info,
 a#toggle-link-label,
@@ -1716,6 +1717,7 @@ a#gottajoin {
 }
 a#toggle-lat-long-msg:hover,
 a#toggle-one-tap-msg:hover,
+a#toggle-yer-phone-num:hover,
 a#toggle-descriptive-location:hover,
 a#toggle-pdf-info:hover,
 a#toggle-link-label:hover,
@@ -1756,6 +1758,7 @@ a#gmaps:hover {
 #gottajoin,
 #lat-long,
 #one-tap,
+#yer-phone-num,
 #desc-loc,
 #pdf-upload,
 #link-label,
@@ -1768,6 +1771,7 @@ a#gmaps:hover {
   height: 100%;
   min-height: 100vh;
   background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 82;
   position: fixed;
   top: 0px;
@@ -1783,6 +1787,7 @@ a#gmaps:hover {
 #gottajoin .msg-bkg,
 #lat-long .msg-bkg,
 #one-tap .msg-bkg,
+#yer-phone-num .msg-bkg,
 #desc-loc .msg-bkg,
 #pdf-upload .msg-bkg,
 #link-label .msg-bkg,
@@ -1806,6 +1811,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one,
 #lat-long .inside-msg-one,
 #one-tap .inside-msg-one,
+#yer-phone-num .inside-msg-one,
 #desc-loc .inside-msg-one,
 #pdf-upload .inside-msg-one,
 #link-label .inside-msg-one,
@@ -1815,6 +1821,7 @@ a#gmaps:hover {
   position: relative;
   padding: 50px;
   background-color: rgba(44, 73, 106, 0.99);
+  box-shadow: 0px 0px 15px 5px rgba(255, 255, 255, 0.5);
   width: 80%;
   max-width: 900px;
   margin-bottom: 20px;
@@ -1823,6 +1830,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one ul,
 #lat-long .inside-msg-one ul,
 #one-tap .inside-msg-one ul,
+#yer-phone-num .inside-msg-one ul,
 #desc-loc .inside-msg-one ul,
 #pdf-upload .inside-msg-one ul,
 #link-label .inside-msg-one ul,
@@ -1836,6 +1844,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one ul li,
 #lat-long .inside-msg-one ul li,
 #one-tap .inside-msg-one ul li,
+#yer-phone-num .inside-msg-one ul li,
 #desc-loc .inside-msg-one ul li,
 #pdf-upload .inside-msg-one ul li,
 #link-label .inside-msg-one ul li,
@@ -1848,6 +1857,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one ul li em,
 #lat-long .inside-msg-one ul li em,
 #one-tap .inside-msg-one ul li em,
+#yer-phone-num .inside-msg-one ul li em,
 #desc-loc .inside-msg-one ul li em,
 #pdf-upload .inside-msg-one ul li em,
 #link-label .inside-msg-one ul li em,
@@ -1862,6 +1872,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one > i,
 #lat-long .inside-msg-one > i,
 #one-tap .inside-msg-one > i,
+#yer-phone-num .inside-msg-one > i,
 #desc-loc .inside-msg-one > i,
 #pdf-upload .inside-msg-one > i,
 #link-label .inside-msg-one > i,
@@ -1878,6 +1889,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one i.fa-peace,
 #lat-long .inside-msg-one i.fa-peace,
 #one-tap .inside-msg-one i.fa-peace,
+#yer-phone-num .inside-msg-one i.fa-peace,
 #desc-loc .inside-msg-one i.fa-peace,
 #pdf-upload .inside-msg-one i.fa-peace,
 #link-label .inside-msg-one i.fa-peace,
@@ -1890,6 +1902,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p.peace-sign,
 #lat-long .inside-msg-one p.peace-sign,
 #one-tap .inside-msg-one p.peace-sign,
+#yer-phone-num .inside-msg-one p.peace-sign,
 #desc-loc .inside-msg-one p.peace-sign,
 #pdf-upload .inside-msg-one p.peace-sign,
 #link-label .inside-msg-one p.peace-sign,
@@ -1903,6 +1916,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one > h1,
 #lat-long .inside-msg-one > h1,
 #one-tap .inside-msg-one > h1,
+#yer-phone-num .inside-msg-one > h1,
 #desc-loc .inside-msg-one > h1,
 #pdf-upload .inside-msg-one > h1,
 #link-label .inside-msg-one > h1,
@@ -1917,6 +1931,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p,
 #lat-long .inside-msg-one p,
 #one-tap .inside-msg-one p,
+#yer-phone-num .inside-msg-one p,
 #desc-loc .inside-msg-one p,
 #pdf-upload .inside-msg-one p,
 #link-label .inside-msg-one p,
@@ -1931,6 +1946,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one > hr,
 #lat-long .inside-msg-one > hr,
 #one-tap .inside-msg-one > hr,
+#yer-phone-num .inside-msg-one > hr,
 #desc-loc .inside-msg-one > hr,
 #pdf-upload .inside-msg-one > hr,
 #link-label .inside-msg-one > hr,
@@ -1944,6 +1960,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one a.pdf,
 #lat-long .inside-msg-one a.pdf,
 #one-tap .inside-msg-one a.pdf,
+#yer-phone-num .inside-msg-one a.pdf,
 #desc-loc .inside-msg-one a.pdf,
 #pdf-upload .inside-msg-one a.pdf,
 #link-label .inside-msg-one a.pdf,
@@ -1957,6 +1974,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one a.pdf:hover,
 #lat-long .inside-msg-one a.pdf:hover,
 #one-tap .inside-msg-one a.pdf:hover,
+#yer-phone-num .inside-msg-one a.pdf:hover,
 #desc-loc .inside-msg-one a.pdf:hover,
 #pdf-upload .inside-msg-one a.pdf:hover,
 #link-label .inside-msg-one a.pdf:hover,
@@ -1969,6 +1987,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p.info-links,
 #lat-long .inside-msg-one p.info-links,
 #one-tap .inside-msg-one p.info-links,
+#yer-phone-num .inside-msg-one p.info-links,
 #desc-loc .inside-msg-one p.info-links,
 #pdf-upload .inside-msg-one p.info-links,
 #link-label .inside-msg-one p.info-links,
@@ -1991,6 +2010,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p.info-links > a,
 #lat-long .inside-msg-one p.info-links > a,
 #one-tap .inside-msg-one p.info-links > a,
+#yer-phone-num .inside-msg-one p.info-links > a,
 #desc-loc .inside-msg-one p.info-links > a,
 #pdf-upload .inside-msg-one p.info-links > a,
 #link-label .inside-msg-one p.info-links > a,
@@ -2021,6 +2041,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p.info-links > a:hover,
 #lat-long .inside-msg-one p.info-links > a:hover,
 #one-tap .inside-msg-one p.info-links > a:hover,
+#yer-phone-num .inside-msg-one p.info-links > a:hover,
 #desc-loc .inside-msg-one p.info-links > a:hover,
 #pdf-upload .inside-msg-one p.info-links > a:hover,
 #link-label .inside-msg-one p.info-links > a:hover,
@@ -2033,6 +2054,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p.aa-link,
 #lat-long .inside-msg-one p.aa-link,
 #one-tap .inside-msg-one p.aa-link,
+#yer-phone-num .inside-msg-one p.aa-link,
 #desc-loc .inside-msg-one p.aa-link,
 #pdf-upload .inside-msg-one p.aa-link,
 #link-label .inside-msg-one p.aa-link,
@@ -2045,6 +2067,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one a.bingo,
 #lat-long .inside-msg-one a.bingo,
 #one-tap .inside-msg-one a.bingo,
+#yer-phone-num .inside-msg-one a.bingo,
 #desc-loc .inside-msg-one a.bingo,
 #pdf-upload .inside-msg-one a.bingo,
 #link-label .inside-msg-one a.bingo,
@@ -2059,6 +2082,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one a.bingo:hover,
 #lat-long .inside-msg-one a.bingo:hover,
 #one-tap .inside-msg-one a.bingo:hover,
+#yer-phone-num .inside-msg-one a.bingo:hover,
 #desc-loc .inside-msg-one a.bingo:hover,
 #pdf-upload .inside-msg-one a.bingo:hover,
 #link-label .inside-msg-one a.bingo:hover,
@@ -2071,6 +2095,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one p.daccaa-ctr,
 #lat-long .inside-msg-one p.daccaa-ctr,
 #one-tap .inside-msg-one p.daccaa-ctr,
+#yer-phone-num .inside-msg-one p.daccaa-ctr,
 #desc-loc .inside-msg-one p.daccaa-ctr,
 #pdf-upload .inside-msg-one p.daccaa-ctr,
 #link-label .inside-msg-one p.daccaa-ctr,
@@ -2085,6 +2110,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one a.daccaa,
 #lat-long .inside-msg-one a.daccaa,
 #one-tap .inside-msg-one a.daccaa,
+#yer-phone-num .inside-msg-one a.daccaa,
 #desc-loc .inside-msg-one a.daccaa,
 #pdf-upload .inside-msg-one a.daccaa,
 #link-label .inside-msg-one a.daccaa,
@@ -2104,6 +2130,7 @@ a#gmaps:hover {
 #gottajoin .inside-msg-one a.daccaa:hover,
 #lat-long .inside-msg-one a.daccaa:hover,
 #one-tap .inside-msg-one a.daccaa:hover,
+#yer-phone-num .inside-msg-one a.daccaa:hover,
 #desc-loc .inside-msg-one a.daccaa:hover,
 #pdf-upload .inside-msg-one a.daccaa:hover,
 #link-label .inside-msg-one a.daccaa:hover,
@@ -2126,6 +2153,7 @@ a.youtube:hover {
   #msg-one .msg-bkg,
   #lat-long .msg-bkg,
   #one-tap .msg-bkg,
+  #yer-phone-num .msg-bkg,
   #desc-loc .msg-bkg,
   #pdf-upload .msg-bkg,
   #link-label .msg-bkg,
@@ -2140,6 +2168,7 @@ a.youtube:hover {
   #msg-one .inside-msg-one,
   #lat-long .inside-msg-one,
   #one-tap .inside-msg-one,
+  #yer-phone-num .inside-msg-one,
   #desc-loc .inside-msg-one,
   #pdf-upload .inside-msg-one,
   #link-label .inside-msg-one,
@@ -2152,6 +2181,7 @@ a.youtube:hover {
   #msg-one .inside-msg-one > i,
   #lat-long .inside-msg-one > i,
   #one-tap .inside-msg-one > i,
+  #yer-phone-num .inside-msg-one > i,
   #desc-loc .inside-msg-one > i,
   #pdf-upload .inside-msg-one > i,
   #link-label .inside-msg-one > i,
@@ -2163,6 +2193,7 @@ a.youtube:hover {
   #msg-one .inside-msg-one p.info-links,
   #lat-long .inside-msg-one p.info-links,
   #one-tap .inside-msg-one p.info-links,
+  #yer-phone-num .inside-msg-one p.info-links,
   #desc-loc .inside-msg-one p.info-links,
   #pdf-upload .inside-msg-one p.info-links,
   #link-label .inside-msg-one p.info-links,
@@ -2175,6 +2206,7 @@ a.youtube:hover {
   #msg-one .inside-msg-one p.aa-link,
   #lat-long .inside-msg-one p.aa-link,
   #one-tap .inside-msg-one p.aa-link,
+  #yer-phone-num .inside-msg-one p.aa-link,
   #desc-loc .inside-msg-one p.aa-link,
   #pdf-upload .inside-msg-one p.aa-link,
   #link-label .inside-msg-one p.aa-link,
