finalizing updates on emailController

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -148,9 +148,12 @@
 				background-color: rgba(0,0,0,0.2);
 			}
 		}
-		& > input.login-pswd {
-			margin-bottom: 0.5em;
-		}
+		& > .login-pswd,
+        #showPassword,
+        #showConf {
+          margin-bottom: 0.5em;
+          letter-spacing: 3px;
+    }
 	}
 
 	.fpwd {
