I think it's working now
Holy macaroni and cheese how long has this taken?!

--- a/style-expanded.css
+++ b/style-expanded.css
@@ -4550,6 +4550,10 @@ span.contact-update-message {
   margin-left: -80px;
 }
 
+span.gtz {
+  font-size: 0.6em;
+}
+
 body.noscrollz {
   overflow: hidden;
 }
