--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -448,7 +448,7 @@ span[data-ampm='PM'] {
 	background-color: #dddddd;
 	color: #313131;
 	font-size: 0.8em;
-	padding: 0.5em;
+	padding: 0.5em 1em;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 	line-height: 1.2em;
