--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -156,6 +156,10 @@
 		i {
 			margin-right: 0.5em;
 		}
+    i.fa-moon,
+    i.fa-lightbulb {
+      margin-right: 0;
+    }
 	}
 	.admin-role,
 	.visitor-role,
@@ -211,6 +215,9 @@
 	   	background-color: rgba(255,255,255,0.5);
 	   	color: #fff;
 	  }
+    &.theme-nav {
+      display: inline;
+    }
 	}
 	a.nav-active {
 		cursor: default;
@@ -249,6 +256,28 @@
 		  }
 	  }
 	}	
+  .theme-nav {
+    display: flex;
+    align-items: center;
+    a {
+      width: auto;
+      &.light,
+      &.dark {
+        display: flex;
+        justify-content: center;
+        padding: 0.5em;
+        width: 50px;
+        border-radius: 5px;
+        margin: 0.5em;
+        &.nav-active {
+          background-color: rgba(255,255,255,0.2);
+        }
+      }
+      &.light {
+        // margin-left: 1.5em;
+      }
+    }
+  }
 	a.admin-login,
 	a.admin-logout {
 		cursor: pointer;
